--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,14 @@
 sudo: required
 dist: trusty
-before_install:
-- sudo apt-get -qq update && sudo apt-get install -y --no-install-recommends texlive-fonts-recommended texlive-latex-extra texlive-fonts-extra dvipng texlive-latex-recommended texlive-luatex latexmk
+addons:
+	apt:
+		packages:
+			- texlive-fonts-recommended
+			- texlive-latex-extra
+			- texlive-fonts-extra
+			- dvipng
+			- texlive-latex-recommended
+			- texlive-luatex
+			- latexmk
 script:
-- latexmk -pdflua -interaction=nonstopmode example.tex
+- latexmk -lualatex -interaction=nonstopmode example.tex
