Revert "Use apt addon und fix latexmk"
This reverts commit b52dd49bba6f7dc025ad8c0464bced6788478b34.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,7 @@
 dist: xenial
-
-addons:
-  apt:
-    packages:
-    - texlive-fonts-recommended
-    - texlive-latex-extra
-    - texlive-fonts-extra
-    - dvipng
-    - texlive-latex-recommended
-    - texlive-luatex
-    - latexmk
-
+sudo: required
+dist: trusty
+before_install:
+- sudo apt-get -qq update && sudo apt-get install -y --no-install-recommends texlive-fonts-recommended texlive-latex-extra texlive-fonts-extra dvipng texlive-latex-recommended texlive-luatex latexmk
 script:
-- latexmk -lualatex -interaction=nonstopmode example.tex
+- latexmk -pdflua -interaction=nonstopmode example.tex
