Fix latexmk for real this time.

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,4 @@ dist: trusty
 before_install:
 - sudo apt-get -qq update && sudo apt-get install -y --no-install-recommends texlive-fonts-recommended texlive-latex-extra texlive-fonts-extra dvipng texlive-latex-recommended texlive-luatex latexmk
 script:
-- latexmk -luatex -interaction=nonstopmode example.tex
+- latexmk -lualatex -interaction=nonstopmode example.tex
