--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ sudo: required
 dist: trusty
 before_install:
 - sudo apt-get -qq update && sudo apt-get install -y --no-install-recommends texlive-fonts-recommended texlive-latex-extra texlive-fonts-extra dvipng texlive-latex-recommended texlive-luatex
-- sudo wget -P /usr/bin/ -O latexmk http://mirrors.ctan.org/support/latexmk/latexmk.pl
+- sudo wget -O /usr/bin/latexmk http://mirrors.ctan.org/support/latexmk/latexmk.pl
 - sudo chmod +x /usr/bin/latexmk
 script:
 - latexmk -lualatex -interaction=nonstopmode example.tex
