--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,11 @@ dist: xenial
 sudo: required
 dist: trusty
 before_install:
-- sudo apt-get -qq update && sudo apt-get install -y --no-install-recommends texlive-fonts-recommended texlive-latex-extra texlive-fonts-extra dvipng texlive-latex-recommended texlive-luatex latex-beamer
+- sudo wget -O texlive.tar.gz http://mirror.ctan.org/systems/texlive/tlnet/install-tl-unx.tar.gz
+- tar -zxvf texlive.tar.gz
+- cd install-tl-*
+- echo "selected_scheme scheme-full" > profile
+- sudo ./install-tl -profile profile
 - sudo wget -O /usr/bin/latexmk http://mirrors.ctan.org/support/latexmk/latexmk.pl
 - sudo chmod +x /usr/bin/latexmk
 script:
