--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,7 @@ before_install:
 - echo "selected_scheme scheme-full" > profile
 - sudo ./install-tl -profile profile
 - cd ..
+- sudo wget -O /usr/bin/latexmk http://mirrors.ctan.org/support/latexmk/latexmk.pl
+- sudo chmod +x /usr/bin/latexmk
 script:
 - latexmk -pdflua -interaction=nonstopmode example.tex
