--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,8 @@ before_install:
 - cd install-tl-*
 - echo "selected_scheme scheme-full" > profile
 - sudo ./install-tl -profile profile
-- PATH=/usr/local/texlive/2017/bin/:$PATH; export PATH 
+- export PATH="/usr/local/texlive/2017/bin/i386-linux:$PATH"
+- echo $PATH
 - cd ..
 script:
 - latexmk -pdflua -interaction=nonstopmode example.tex
