--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_install:
 - echo "selected_scheme scheme-full" > profile
 - sudo ./install-tl -profile profile
 - export PATH="/usr/local/texlive/2017/bin/i386-linux:$PATH"
-- echo $PATH
+- sudo find / -name latexmk
 - cd ..
 script:
 - latexmk -pdflua -interaction=nonstopmode example.tex
