--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,10 @@
 dist: xenial
 sudo: required
 
-before_install:
-- sudo apt-get install -y texlive-lua
+addons:
+  apt:
+    packages:
+      - texlive-lua
+
 script:
 - latexmk -pdflua -interaction=nonstopmode example.tex
