--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ addons:
     update: true
     packages:
       - texlive-luatex
+      - latexmk
 
 script:
 - latexmk -pdflua -interaction=nonstopmode example.tex
