--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ addons:
     update: true
     packages:
       - texlive-latex-recommended
+      - texlive-xetex
       - pgf
       - texlive-luatex
       - latexmk
