--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ addons:
     packages:
       - texlive-latex-recommended
       - texlive-xetex
+      - texlive-math-extra
       - pgf
       - texlive-luatex
       - latexmk
