--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ addons:
       - latexmk
       - fonts-noto
       - fonts-noto-mono
-
+      - fonts-lmodern
+      
 script:
 - latexmk -f -lualatex -interaction=nonstopmode example.tex
